@@ -87,6 +87,7 @@ const WindowFlags WindowCloseButtonHint = WindowFlags(0x08000000);
 #undef HAVE_SIGNAL_H
 #else
 #include <unistd.h>
+#include <fcntl.h>
 // Notification pipes descriptors
 #define QJACKCTL_FDNIL         -1
 #define QJACKCTL_FDREAD         0
@@ -1360,11 +1361,12 @@ void qjackctlMainForm::appendStdoutBuffer ( const QString& s )
 {
 	m_sStdoutBuffer.append(s);
 
-	int iLength = m_sStdoutBuffer.lastIndexOf('\n') + 1;
+	const int iLength = m_sStdoutBuffer.lastIndexOf('\n');
 	if (iLength > 0) {
 		QString sTemp = m_sStdoutBuffer.left(iLength);
-		m_sStdoutBuffer.remove(0, iLength);
-		QStringListIterator iter(sTemp.split('\n'));
+		m_sStdoutBuffer.remove(0, iLength + 1);
+		QStringList list = sTemp.split('\n');
+		QStringListIterator iter(list);
 		while (iter.hasNext()) {
 			sTemp = iter.next();
 			if (!sTemp.isEmpty())
@@ -1379,7 +1381,7 @@ void qjackctlMainForm::flushStdoutBuffer (void)
 {
 	if (!m_sStdoutBuffer.isEmpty()) {
 		appendMessagesText(detectXrun(m_sStdoutBuffer));
-		m_sStdoutBuffer.truncate(0);
+		m_sStdoutBuffer.clear();
 	}
 }
 
@@ -1547,12 +1549,26 @@ void qjackctlMainForm::updateXrunStats ( float fXrunLast )
 // Own stdout/stderr socket notifier slot.
 void qjackctlMainForm::stdoutNotifySlot ( int fd )
 {
+ #if !defined(WIN32)
+	// Set non-blocking reads, if not already...
+	const int iFlags = ::fcntl(fd, F_GETFL, 0);
+	int iBlock = ((iFlags & O_NONBLOCK) == 0);
+	if (iBlock)
+		iBlock = ::fcntl(fd, F_SETFL, iFlags | O_NONBLOCK);
+	// Read as much as is available...
+	QString sTemp;
 	char achBuffer[1024];
-	int  cchBuffer = ::read(fd, achBuffer, sizeof(achBuffer) - 1);
-	if (cchBuffer > 0) {
-		achBuffer[cchBuffer] = (char) 0;
-		appendStdoutBuffer(achBuffer);
+	const int cchBuffer = sizeof(achBuffer) - 1;
+	int cchRead = ::read(fd, achBuffer, cchBuffer);
+	while (cchRead > 0) {
+		achBuffer[cchRead] = (char) 0;
+		sTemp.append(achBuffer);
+		cchRead = (iBlock ? 0 : ::read(fd, achBuffer, cchBuffer));
 	}
+	// Needs to be non-empty...
+	if (!sTemp.isEmpty())
+		appendStdoutBuffer(sTemp);
+#endif	
 }
 
 
